// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Sequence with the @cubejs-backend/postgres-driver for the Customers.RollingExternal 1`] = `
Array [
  Array [
    "downloadQueryResults",
  ],
  Array [
    "createSchemaIfNotExists",
    "uploadTableWithIndexes",
    "createTable",
  ],
]
`;

exports[`Sequence with the @cubejs-backend/postgres-driver for the Customers.RollingInternal 1`] = `
Array [
  Array [
    "loadPreAggregationIntoTable",
  ],
  Array [],
]
`;

exports[`Sequence with the @cubejs-backend/postgres-driver for the ECommerce.SimpleAnalysisExternal 1`] = `
Array [
  Array [
    "downloadQueryResults",
  ],
  Array [
    "uploadTableWithIndexes",
    "createTable",
  ],
]
`;

exports[`Sequence with the @cubejs-backend/postgres-driver for the ECommerce.SimpleAnalysisInternal 1`] = `
Array [
  Array [
    "loadPreAggregationIntoTable",
  ],
  Array [],
]
`;

exports[`Sequence with the @cubejs-backend/postgres-driver for the ECommerce.TimeAnalysisExternal 1`] = `
Array [
  Array [
    "downloadQueryResults",
    "downloadQueryResults",
    "downloadQueryResults",
    "downloadQueryResults",
    "downloadQueryResults",
    "downloadQueryResults",
    "downloadQueryResults",
    "downloadQueryResults",
    "downloadQueryResults",
    "downloadQueryResults",
    "downloadQueryResults",
    "downloadQueryResults",
  ],
  Array [
    "uploadTableWithIndexes",
    "createTable",
    "uploadTableWithIndexes",
    "createTable",
    "uploadTableWithIndexes",
    "createTable",
    "uploadTableWithIndexes",
    "createTable",
    "uploadTableWithIndexes",
    "createTable",
    "uploadTableWithIndexes",
    "createTable",
    "uploadTableWithIndexes",
    "createTable",
    "uploadTableWithIndexes",
    "createTable",
    "uploadTableWithIndexes",
    "createTable",
    "uploadTableWithIndexes",
    "createTable",
    "uploadTableWithIndexes",
    "createTable",
    "uploadTableWithIndexes",
    "createTable",
  ],
]
`;

exports[`Sequence with the @cubejs-backend/postgres-driver for the ECommerce.TimeAnalysisInternal 1`] = `
Array [
  Array [
    "loadPreAggregationIntoTable",
    "loadPreAggregationIntoTable",
    "loadPreAggregationIntoTable",
    "loadPreAggregationIntoTable",
    "loadPreAggregationIntoTable",
    "loadPreAggregationIntoTable",
    "loadPreAggregationIntoTable",
    "loadPreAggregationIntoTable",
    "loadPreAggregationIntoTable",
    "loadPreAggregationIntoTable",
    "loadPreAggregationIntoTable",
    "loadPreAggregationIntoTable",
  ],
  Array [],
]
`;
